[build-system]
requires = ["maturin>=1.1,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]

[tool.poetry]
name = "haem"
version = "0.1.0"
description = "A Python library for working on Bioinformatics problems."
authors = ["Tom Godkin <tomgodkin@pm.me>"]
readme = "README.md"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
mypy = "^1.11.2"
maturin = "^1.7.4"
ruff = "^0.6.8"

[tool.ruff]
lint.extend-select = ["I"]

[tool.ruff.lint.isort]
known-first-party = ["haem"]
